# firewall-analyzer

./: Cargo.toml  Dockerfile  config.yaml  readme.md
.github/workflows/: docker-image.yml
src/: config.rs  error.rs  main.rs
src/consumer/: config.rs  mod.rs  service.rs
src/forwarder/: config.rs  error.rs  http_client.rs  mod.rs  noop_client.rs  service.rs
src/model/: mod.rs  request.rs
src/receiver/: config.rs  mod.rs  service.rs
src/sender/: dummy.rs  mod.rs
src/telemetry/: config.rs  mod.rs
src/validation_provider/: dummy.rs  mod.rs  service.rs
src/validation_provider/requests_from_ip_counter/: config.rs  validator.rs
src/validator/: dummy.rs  ip_count.rs  mod.rs  request_cost.rs  service.rs
src/validator/generic_validator/: count.rs  mod.rs  state.rs  validator.rs
src/validator/ip_count/: data.rs  mod.rs  rule.rs  state.rs  validator.rs
src/validator/requests_from_ip_counter/: config.rs  mod.rs  state.rs  validator.rs
src/validator_provider/: dummy.rs  mod.rs  service.rs
src/validator_provider/requests_from_ip_counter/: config.rs  validator.rs
src/validators/: common.rs  mod.rs
src/validators/dummy/: mod.rs
src/validators/requests_from_ip_cost/: config.rs  mod.rs  state.rs  validator.rs
src/validators/requests_from_ip_counter/: config.rs  error.rs  mod.rs  rule.rs  state.rs  validator.rs
src/validators/requests_from_ua_counter/: config.rs  mod.rs  state.rs  validator.rs
