[package]
name = "firewall-analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
circular-queue = "0.2.6"

chrono = "0.4.19"

duration-string = "0.0.6"

futures = "0.3.21"

reqwest = { version = "0.11.10", features = ["json"] }

kafka = "0.9.0"

tokio = { version = "1.16.1", features = ["rt-multi-thread", "macros", "sync"] }
async-trait = "0.1.52"

serde = "1.0.137"
serde_json = "1.0.81"

pepe-config = "0.0.6"

thiserror = "1.0.31"
anyhow = "1.0.57"

tracing = { version = "0.1.34", features = ["log"] }
tracing-subscriber = { version = "0.3.11", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.2"
tracing-log = "0.1.3"
tracing-actix-web = "0.5"
opentelemetry = { version = "0.17.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.16.0", features = ["rt-tokio"] }
tracing-opentelemetry = "0.17.2"

[[bin]]
name = "service"
path = "src/main.rs"
