[package]
name = "firewall-analyzer"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.52"
circular-queue = "0.2.6"
chrono = "0.4.19"
futures = "0.3.21"
kafka = "0.9.0"
pepe-config = "0.0.6"
regex = "1.5.6"
reqwest = { version = "0.11.10", features = ["json"] }
serde = "1.0.137"
serde_json = "1.0.81"
thiserror = "1.0.31"
tokio = { version = "1.16.1", features = ["rt-multi-thread", "macros", "sync"] }
tokio-retry = "0.3.0"
tracing = { version = "0.1.34", features = ["log"] }
tracing-subscriber = { version = "0.3.11", features = ["registry", "env-filter"] }
tracing-log = "0.1.3"

opentelemetry = { version = "0.17.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.16.0", features = ["rt-tokio"] }
tracing-opentelemetry = "0.17.2"

[[bin]]
name = "service"
path = "src/main.rs"
